--- a/openshift/examples/s3-xomd-data-crd.yml
+++ b/openshift/examples/s3-xomd-data-crd.yml
@@ -1,6 +1,7 @@
 apiVersion: s3.services.k8s.aws/v1alpha1
 kind: Bucket
 metadata:
-  name: magic-smoke-s3
+  name: xond-data
+  namespace: fingerprint-id
 spec:
-  name: magic-smoke-s3
+  name: xond-data
