add: more notes
Former-commit-id: dbcbde093d037fea6b95d7916544f75526e630d9

--- a/openshift/odh/notebook-sizes-custom.yml
+++ b/openshift/odh/notebook-sizes-custom.yml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/part-of: jupyterhub
     component.opendatahub.io/name: jupyterhub
+    # the following label (jupyterhub) is required for ODH to use the config
     jupyterhub: singleuser-profiles
     opendatahub.io/component: 'true'
 data:
