--- a/openshift/odh/opendatahub-kdef.yml
+++ b/openshift/odh/opendatahub-kdef.yml
@@ -1,6 +1,7 @@
 apiVersion: kfdef.apps.kubeflow.org/v1
 kind: KfDef
 metadata:
+  namespace: fingerprint-id
   name: opendatahub
 spec:
   applications:
