--- a/openshift/examples/s3-sagemaker-real-crd.yml
+++ b/openshift/examples/s3-sagemaker-real-crd.yml
@@ -1,7 +1,7 @@
 apiVersion: s3.services.k8s.aws/v1alpha1
 kind: Bucket
 metadata:
-  name: xond-data
+  name: sagemaker-real
   namespace: fingerprint-id
 spec:
-  name: xond-data
+  name: sagemaker-real
