--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy==1.20.3
 opencv-python==4.6.0.66
 pipenv==2022.11.30
 sagemaker==2.121.2
-scikit-learn==1.2.0
+scikit-learn>=1.0.2
 seaborn==0.12.1
 tensorflow==2.11.0
 tensorflow-estimator==2.11.0
