update: .gitignore for bfg
Former-commit-id: e1ff68a40824fe6089e017ce2813de104e39b2cc

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 data/
 scratch/
 
+# bfg - because data scientists never commit large data to git 
+# need to clean large blobs accidently commited to git
+..bfg-report/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
