--- a/openshift/ack-examples/s3-bucket-fingerprint-data-cr.yml
+++ b/openshift/ack-examples/s3-bucket-fingerprint-data-cr.yml
@@ -2,5 +2,8 @@ apiVersion: s3.services.k8s.aws/v1alpha1
 kind: Bucket
 metadata:
   name: sagemaker-fingerprint-data
+  annotations:
+    gitUrl: https://github.com/redhat-na-ssa/demo-rosa-sagemaker.git
+    fix: openshift/ack-examples/adopted/adopt-sagemaker-fingerprint-data-cr.yml
 spec:
   name: sagemaker-fingerprint-data
