--- a/serving/client/Dockerfile
+++ b/serving/client/Dockerfile
@@ -1,5 +1,6 @@
 FROM registry.access.redhat.com/ubi7/python-38
 
+# /opt/app-root/src/ is where s2i dumps git src
 COPY . /opt/app-root/src/
 
 RUN pip --no-cache-dir install -U pip && \
@@ -7,9 +8,6 @@ RUN pip --no-cache-dir install -U pip && \
 
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONIOENCODING=UTF-8
-
-ENV GRADIO_SERVER_PORT=8080
-ENV GRADIO_SERVER_NAME=0.0.0.0
 
 EXPOSE 8080
 
