--- a/serving/client/Dockerfile
+++ b/serving/client/Dockerfile
@@ -1,5 +1,7 @@
 FROM registry.access.redhat.com/ubi7/python-38
 
+USER root
+
 # /opt/app-root/src/ is where s2i dumps git src
 COPY . /opt/app-root/src/
 
@@ -11,6 +13,8 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONIOENCODING=UTF-8
 
 EXPOSE 8080
+
+USER 1001
 
 ENTRYPOINT ["python"]
 CMD ["app.py"]
