--- a/openshift/operators/ack-ec2-controller/operator/overlays/alpha/user-secrets-secret.yaml
+++ b/openshift/operators/ack-ec2-controller/operator/overlays/alpha/user-secrets-secret.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ack-sagemaker-user-secrets
+  annotations:
+    sealedsecrets.bitnami.com/managed: "true"
+  name: ack-ec2-user-secrets
   namespace: ack-system
 stringData:
   AWS_ACCESS_KEY_ID: UPDATE_AWS_ACCESS_KEY_ID
