--- a/openshift/operators/ack-ecr-controller/operator/base/install.yaml
+++ b/openshift/operators/ack-ecr-controller/operator/base/install.yaml
@@ -3,12 +3,12 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   labels:
-    operators.coreos.com/ack-sagemaker-controller.ack-system: ""
-  name: ack-sagemaker-controller
+    operators.coreos.com/ack-ecr-controller.ack-system: ""
+  name: ack-ecr-controller
   namespace: ack-system
 spec:
   channel: patch-me
   installPlanApproval: Automatic
-  name: ack-sagemaker-controller
+  name: ack-ecr-controller
   source: community-operators
   sourceNamespace: openshift-marketplace
