--- a/openshift/operators/ack-iam-controller/operator/overlays/alpha/user-secrets-secret.yaml
+++ b/openshift/operators/ack-iam-controller/operator/overlays/alpha/user-secrets-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ack-sagemaker-user-secrets
+  name: ack-iam-user-secrets
   namespace: ack-system
 stringData:
   AWS_ACCESS_KEY_ID: UPDATE_AWS_ACCESS_KEY_ID
