--- a/openshift/operators/ack-iam-controller/operator/base/kustomization.yaml
+++ b/openshift/operators/ack-iam-controller/operator/base/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+bases:
+  - ../../../ack-system/base
+
 resources:
   - install.yaml
-  - user-config-cm.yaml
