--- a/openshift/operators/ack-s3-controller/operator/overlays/alpha/kustomization.yaml
+++ b/openshift/operators/ack-s3-controller/operator/overlays/alpha/kustomization.yaml
@@ -13,3 +13,10 @@ patches:
       - op: replace
         path: /spec/channel
         value: 'alpha'
+  - target:
+      kind: ConfigMap
+      name: ack-controller-user-config
+    patch: |-
+      - op: replace
+        path: /metadata/name
+        value: 'ack-s3-user-config'
