install grafana operator

--- a/openshift/operators/grafana-operator/overlays/models/namespace.yaml
+++ b/openshift/operators/grafana-operator/overlays/models/namespace.yaml
@@ -4,4 +4,4 @@ metadata:
   annotations:
     openshift.io/description: Example grafana oauth deployment
     openshift.io/display-name: Grafana OAuth Example
-  name: grafana
+  name: models
