--- a/openshift/operators/grafana-operator/overlays/models/namespace.yaml
+++ b/openshift/operators/grafana-operator/overlays/models/namespace.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    openshift.io/description: Example grafana oauth deployment
-    openshift.io/display-name: Grafana OAuth Example
-  name: models
+    openshift.io/description: Grafana Operator
+    openshift.io/display-name: Grafana Operator
+  name: grafana
