--- a/openshift/operators/prometheus-operator/aggregate/overlays/models/operator-group.yaml
+++ b/openshift/operators/prometheus-operator/aggregate/overlays/models/operator-group.yaml
@@ -2,7 +2,7 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: prom-test
+  name: prometheus
 spec:
   targetNamespaces:
-    - prom-test
+    - models
