--- a/openshift/operators/ack-sagemaker-controller/operator/overlays/alpha/user-secrets-secret.yaml
+++ b/openshift/operators/ack-sagemaker-controller/operator/overlays/alpha/user-secrets-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: ack-sagemaker-user-secrets
   namespace: ack-system
 stringData:
-  AWS_ACCESS_KEY_ID: patch-me
-  AWS_SECRET_ACCESS_KEY: patch-me
+  AWS_ACCESS_KEY_ID: UPDATE_AWS_ACCESS_KEY_ID
+  AWS_SECRET_ACCESS_KEY: UPDATE_AWS_SECRET_ACCESS_KEY
