--- a/openshift/operators/ack-controllers/aggregate/instance/namespace.yaml
+++ b/openshift/operators/ack-controllers/aggregate/instance/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    openshift.io/display-name: AWS Operators
+    openshift.io/display-name: AWS Controllers for Kubernetes (ACK)
   name: ack-system
