--- a/openshift/operators/ack-controllers/overlays/default/kustomization.yaml
+++ b/openshift/operators/ack-controllers/overlays/default/kustomization.yaml
@@ -1,15 +1,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-  - ../../../ack-ec2-controller/operator/overlays/alpha
-  - ../../../ack-ecr-controller/operator/overlays/alpha
-  - ../../../ack-iam-controller/operator/overlays/alpha
-  - ../../../ack-s3-controller/operator/overlays/alpha
-  - ../../../ack-sagemaker-controller/operator/overlays/alpha
+bases:
+  - ../../base
 
+resources:
+  - aws-ops-namespace.yaml
+
+patches:
+  - patch: |-
+      - op: replace
+        path: /data/ACK_WATCH_NAMESPACE
+        value: aws-ops
+    target:
+      kind: ConfigMap
+      name: ack-controller-user-config
 # SingleNamespace InstallModeType not supported
-# patches:
 #   - patch: |-
 #       - op: add
 #         path: /spec/targetNamespaces
