update: git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
-[submodule "data"]
+[submodule "scratch"]
 	path = scratch/.raw
 	url = https://github.com/redhat-na-ssa/demo-datasci-fingerprint-data.git
+
+[submodule "explore"]
+	path = explore
+	url = https://github.com/redhat-na-ssa/demo-datasci-fingerprint.git
