--- a/openshift/operators/prometheus-operator/aggregate/overlays/default/operator-group.yaml
+++ b/openshift/operators/prometheus-operator/aggregate/overlays/default/operator-group.yaml
@@ -3,6 +3,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: prometheus
+  namespace: prometheus
 spec:
   targetNamespaces:
-    - models
+    - prometheus
