fix: prometheus operator

--- a/openshift/operators/prometheus-operator/aggregate/overlays/models/kustomization.yaml
+++ b/openshift/operators/prometheus-operator/aggregate/overlays/models/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 bases:
   - ../default
-  - ../../instance/overlays/models
+  - ../../../instance/overlays/models
 
 patches:
   - patch: |-
