--- a/openshift/operators/prometheus-operator/instance/overlays/example/prometheus-service.yaml
+++ b/openshift/operators/prometheus-operator/instance/overlays/example/prometheus-service.yaml
@@ -18,7 +18,7 @@ spec:
       protocol: TCP
       targetPort: web-tls
   selector:
-    app: prometheus
+    prometheus: app
   sessionAffinity: ClientIP
   sessionAffinityConfig:
     clientIP:
