--- a/openshift/operators/prometheus-operator/instance/overlays/example/prometheus-proxy-rbac.yaml
+++ b/openshift/operators/prometheus-operator/instance/overlays/example/prometheus-proxy-rbac.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: app-prometheus
+  name: prometheus-app
 rules:
   - apiGroups:
       - authentication.k8s.io
@@ -20,11 +20,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: app-prometheus
+  name: prometheus-app
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: app-prometheus
+  name: prometheus-app
 subjects:
   - kind: ServiceAccount
-    name: app-prometheus
+    name: prometheus-app
