--- a/openshift/operators/prometheus-operator/instance/overlays/example/prometheus-route.yaml
+++ b/openshift/operators/prometheus-operator/instance/overlays/example/prometheus-route.yaml
@@ -7,10 +7,10 @@ metadata:
   name: prometheus-app
 spec:
   port:
-    targetPort: web
+    targetPort: web-tls
   tls:
     insecureEdgeTerminationPolicy: Redirect
-    termination: edge
+    termination: reencrypt
   to:
     kind: Service
     name: prometheus-app
