--- a/serving/resources/grafana-instance.yaml
+++ b/serving/resources/grafana-instance.yaml
@@ -1,4 +1,16 @@
 apiVersion: integreatly.org/v1alpha1
 kind: Grafana
 metadata:
+  labels:
+    app: triton-grafana
   name: grafana
+spec:
+  config:
+    auth.basic:
+      enabled: true
+  dashboardLabelSelector:
+    - matchExpressions:
+        - key: app
+          operator: In
+          values:
+            - triton-grafana
