update: operators from gitops catalog

--- a/components/operators/ack-controllers/aggregate/popular/kustomization.yaml
+++ b/components/operators/ack-controllers/aggregate/popular/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: ack-system
 
 bases:
-  - ../instance
+  - ../../instance
   - ../../../ack-ec2-controller/overlays/alpha
   - ../../../ack-ecr-controller/overlays/alpha
   - ../../../ack-iam-controller/overlays/alpha
