--- a/components/serving/resources/namespace.yaml
+++ b/components/serving/resources/namespace.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    openshift.io/description: really, really rediculously good looking...
+    openshift.io/description: really, really ridiculously good looking...
     openshift.io/display-name: Hand Models
   name: models
