--- a/components/operators/prometheus-operator/aggregate/overlays/example/operator-group.yaml
+++ b/components/operators/prometheus-operator/aggregate/overlays/example/operator-group.yaml
@@ -2,7 +2,7 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: grafana
+  name: prom-test
 spec:
   targetNamespaces:
-    - models
+    - prom-test
