--- a/components/operators/prometheus-operator/instance/overlays/example/prometheus-sa.yaml
+++ b/components/operators/prometheus-operator/instance/overlays/example/prometheus-sa.yaml
@@ -3,4 +3,4 @@ kind: ServiceAccount
 metadata:
   annotations:
     serviceaccounts.openshift.io/oauth-redirectreference.prometheus: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"prometheus-app"}}'
-  name: prometheus-app
+  name: app-prometheus
