--- a/components/operators/prometheus-operator/instance/overlays/example/prometheus.yaml
+++ b/components/operators/prometheus-operator/instance/overlays/example/prometheus.yaml
@@ -9,7 +9,7 @@ spec:
   replicaExternalLabelName: ""
   ruleNamespaceSelector: {}
   ruleSelector: {}
-  serviceAccountName: prometheus-app
+  serviceAccountName: app-prometheus
   serviceMonitorSelector: {}
   secrets:
     - prometheus-app-tls
@@ -20,7 +20,7 @@ spec:
         - -http-address=
         - -email-domain=*
         - -upstream=http://localhost:9090
-        - -openshift-service-account=prometheus-app
+        - -openshift-service-account=app-prometheus
         - '-openshift-sar={"resource": "namespaces", "verb": "get"}'
         - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}}'
         - -tls-cert=/etc/tls/private/tls.crt
@@ -30,7 +30,7 @@ spec:
         - -openshift-ca=/etc/pki/tls/cert.pem
         - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         - -skip-auth-regex=^/metrics
-      image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.11
+      image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
       imagePullPolicy: Always
       name: prometheus-proxy
       ports:
