--- a/openshift/operators/ack-system/base/user-config-cm.yaml
+++ b/openshift/operators/ack-system/base/user-config-cm.yaml
@@ -9,3 +9,5 @@ data:
   AWS_REGION: us-east-2
   ACK_RESOURCE_TAGS: acktagged
   AWS_ENDPOINT_URL: ""
+  ENABLE_LEADER_ELECTION: "true"
+  LEADER_ELECTION_NAMESPACE: ""
