--- a/openshift/ack-examples/sagemaker-nb-instance-cr.yml
+++ b/openshift/ack-examples/sagemaker-nb-instance-cr.yml
@@ -7,6 +7,7 @@ metadata:
 spec:
   # NOTICE: There is no CRD for CodeRepository (manual creation) 
   # defaultCodeRepository: 'https://github.com/redhat-na-ssa/demo-rosa-sagemaker.git'
+  defaultCodeRepository: 'https://github.com/redhat-na-ssa/datasci-fingerprint.git'
   instanceType: ml.p3.8xlarge
   lifecycleConfigName: lifecycle-from-github
   notebookInstanceName: fingerprint-id
