--- a/components/operators/ack-system/overlays/aws-ops/kustomization.yaml
+++ b/components/operators/ack-system/overlays/aws-ops/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - ../../aggregate/popular
-
 resources:
-  - aws-ops-namespace.yaml
+  - ../../aggregate/popular
+  - namespace.yaml
 
 patches:
   - patch: |-
