--- a/components/operators/ack-route53-controller/operator/overlays/alpha/user-secrets-secret.yaml
+++ b/components/operators/ack-route53-controller/operator/overlays/alpha/user-secrets-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ack-ec2-user-secrets
+  name: ack-route53-user-secrets
   namespace: ack-system
 stringData:
   AWS_ACCESS_KEY_ID: UPDATE_AWS_ACCESS_KEY_ID
